fixed gap between image and text and the side of the bars beside mail icon

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,7 @@
 body {
 	font-family: Georgia, serif;
 	color: #222222;
-	font-size: 1em; /* 16px */
-	line-height: 1.3;
+	font-size: 1em; 	line-height: 1.3;
 	max-width: 1400px;
 	margin: 0 auto;
 }
@@ -18,12 +17,12 @@ h1, h2 {
 }
 
 h1 {
-	font-size: 3em; /* 48px */
+	font-size: 3em; 
 	text-transform: uppercase;
 	margin: 0.5em 0;
 }
 h2 {
-	font-size: 1.5em; /* 48px */
+	font-size: 1.5em; 
 	color: #D5664D;
 }
 
@@ -32,7 +31,7 @@ h4 {
 }
 
 p {
-	margin: 1em 0; /*16px*/
+	margin: 1em 0; 
 	padding: 0 0.5em;
 }
 
@@ -162,7 +161,7 @@ em {
 		}
 
 		.em {
-			height: 6em;
+			height: 4em;
 			width: 6em;
 			border-right: 0.1em solid black;
 			border-left: 0.1em solid black;
@@ -290,22 +289,27 @@ figure {
 			padding: 0 1em 0 1em;	
 		}
 	}
-	h4 {
-		font: 600 1em Georgia, serif;
-		text-transform: uppercase;
-		background-color: rgba(30, 150, 195, .8);
-		border-top: 0.6em solid blue;
-		border-color: rgba(6, 96, 130, .9);
-		padding-top: 0.4em;
-		margin-top: 0;
-	}
-	p {
-		font: 300 0.7em HelveticaNueue, Helvetica, sans-serif;
-		color: white;
-		background-color: rgba(30, 150, 195, .8);
-		padding: 0.8em 1em 1.5em 1em;
-		margin: 0 0 4em 0;
-	}
+		h4 {
+			font: 600 1em Georgia, serif;
+			text-transform: uppercase;
+			background-color: rgba(30, 150, 195, .8);
+			border-top: 0.6em solid blue;
+			border-color: rgba(6, 96, 130, .9);
+			padding-top: 0.4em;
+			margin-top: 0;
+		}
+		p {
+			font: 300 0.7em HelveticaNueue, Helvetica, sans-serif;
+			color: white;
+			background-color: rgba(30, 150, 195, .8);
+			padding: 0.8em 1em 1.5em 1em;
+			margin: 0 0 4em 0;
+		}
+	
 }
 
+	.costume-explination {
+		position: relative;
+		top: -0.29em;
+	}
 
